--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ node_modules
 dist
 dist-ssr
 *.local
+.env.local
+.env
+.env.production.local
+.env.production
 
 # Editor directories and files
 .vscode/*
